Fix z-index bug

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -273,7 +273,7 @@ div.card {
         width: 100%;
         align-self: flex-start;
         text-align: left;
-        z-index: 1;
+        /* z-index: 1; */
         overflow: hidden;
         word-wrap: break-word;
 
@@ -328,7 +328,7 @@ div.card {
         text-align: center;
         align-self: flex-end;
         max-height: 2.2em;
-        z-index: 1;
+        /* z-index: 1; */
     }
 }
 
